--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
 	"dependencies": {
-		"next": "^15.1.4",
-		"react": "^19.0.0",
-		"react-dom": "^19.0.0"
+		"babel-plugin-react-compiler": "19.0.0-beta-63e3235-20250105",
+		"next": "15.2.0-canary.6",
+		"react": "19.1.0-canary-540efebc-20250112",
+		"react-dom": "19.1.0-canary-540efebc-20250112"
 	},
 	"devDependencies": {
 		"autoprefixer": "^10.4.20",
@@ -10,5 +11,8 @@
 		"tailwindcss": "^3.4.17"
 	},
 	"packageManager": "pnpm@9.15.3+sha512.1f79bc245a66eb0b07c5d4d83131240774642caaa86ef7d0434ab47c0d16f66b04e21e0c086eb61e62c77efc4d7f7ec071afad3796af64892fae66509173893a",
+	"scripts": {
+		"dev": "next dev --experimental-https --turbo"
+	},
 	"type": "module"
 }
